fix: gzoltar now works, tests changed to junit4